--- a/index.html
+++ b/index.html
@@ -2,10 +2,27 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel ="stylesheet" href="style.css">
     <title>CV. HTML & CSS & GIT BASICS</title>
   </head>
   <body>
-
+    <header class ="header">
+        <div class="container">
+            <div class = "header_inner">
+                <div class ="header__logo">CV. Nikita Pasiukov</div>
+                <nav class="nav">
+                    <a class="nav__link" href="#">About me</a>
+                    <a class="nav__link" href="#">Contacts</a>
+                    <a class="nav__link" href="#">Info</a>
+                    <a class="nav__link" href="#">Skills</a>
+                    <a class="nav__link" href="#">Other information</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <section>
+        <div class = "container"></div>
+    </section>
 
   </body>
 </html>
